Fix Play-Button width on frontpage
The Play-Button is too small, at least in german translation.

--- a/public/css/static.styl
+++ b/public/css/static.styl
@@ -30,7 +30,7 @@ body
   //box-shadow: 0 0 40px #494141;
   display:inline
   font-size: 20px
-  width:100px
+  min-width:100px
   height:50px
 
 #about-page
